# amplihack-xpia-defender

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: matching.rs
src/: engine.rs  errors.rs  health.rs  lib.rs  main.rs  types.rs
src/patterns/: definitions.rs  mod.rs
tests/: adversarial.rs  cli_tests.rs  golden_tests.rs  outside_in.rs  property_tests.rs
tests/golden/: python_results.json
