[package]
name = "amplihack-xpia-defender"
version = "0.1.0"
edition = "2021"
description = "Standalone XPIA (Cross-Prompt Injection Attack) defense library with guaranteed-linear regex matching"
license = "MIT"
repository = "https://github.com/rysweet/amplihack-xpia-defender"

[dependencies]
aho-corasick = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
log = "0.4"
dirs = "6.0.0"
shellexpand = "3.1.2"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1"

[[bench]]
name = "matching"
harness = false
